--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot>=21.0.1
-openai==1.12.0
+openai>=1.20.0
 google-generativeai>=0.7.2
 pillow>=10.3.0
 numpy==1.26.2
@@ -15,4 +15,5 @@ pydantic==2.5.2
 tenacity==8.2.3
 colorlog==6.7.0
 firebase-admin==6.3.0
-gunicorn==21.2.0 # For Railway deployment 
+gunicorn==21.2.0
+httpx>=0.27.0 # Added/Updated 
